<resources>
    <string name="app_name">Java Mods Optimiser</string>
    <string name="Button_choose_file">Pick file</string>
    <string name="File_picked">File Picked:</string>

    <string name="mod_info_title">Information:</string>
    <string name="mod_info_name">Name: </string>
    <string name="mod_info_minecraft_version">Made for: </string>
    <string name="mod_info_version">Version: </string>
    <string name="mod_info_texture_number">Textures: </string>
    <string name="mod_info_sound_number">Sounds: </string>
    <string name="mod_info_unknown">Unknown, wait for parsing…</string>

    <string name="option_title">Options:</string>
    <string name="option_delete_original">Delete original file</string>
    <string name="option_really_low_quality">Make the mod even smaller (reduced quality)</string>
    <string name="option_parallel_workload">Multi-Threaded workload (usually faster)</string>
    <string name="option_remove_signature">Remove signature files</string>
    <string name="options_remove_miscellaneous">Remove miscellaneous files</string>

    <string name="process_status_title">Status:</string>
    <string name="process_status_copying">Copying:</string>
    <string name="process_status_unzipping">Unzipping:</string>
    <string name="process_status_parsing">Parsing:</string>
    <string name="process_status_texture">Textures:</string>
    <string name="process_status_sound">Sounds:</string>
    <string name="process_status_json">Minify:</string>
    <string name="process_status_zipping">Repacking:</string>

    <string name="text_output_optimizing">Optimizing </string>

    <string name="dialog_illegal_path_title">Illegal path !</string>
    <string name="dialog_illegal_path_message">You can\'t take mods which are in the app folder !</string>
    <string name="dialog_illegal_path_button">Oh, OK.</string>

    <string name="dialog_temp_files_found_title">Temporary files found !</string>
    <string name="dialog_temp_files_found_message">It seems the optimizing last optimizing process has been interrupted, the app will start cleaning any leftovers. \n This process may take several seconds…</string>
    <string name="dialog_temp_files_found_button">Oh, OK.</string>

    <string name="setting_category_skip">Skipping settings</string>
    <string name="setting_title_skip_texture">Skip texture optimization</string>
    <string name="setting_subtitle_skip_texture_off">Textures are optimized</string>
    <string name="setting_subtitle_skip_texture_on">Textures are left untouched</string>

    <string name="setting_title_skip_sound">Skip sound optimization</string>
    <string name="setting_subtitle_skip_sound_off">Sounds are optimized</string>
    <string name="setting_subtitle_skip_sound_on">Sounds are left untouched</string>

    <string name="setting_title_skip_json">Skip json optimization</string>
    <string name="setting_subtitle_skip_json_off">Json files are trimmed down</string>
    <string name="setting_subtitle_skip_json_on">Json files are left untouched</string>

    <string name="setting_category_quality">Quality settings</string>
    <string name="setting_title_quality_texture">Texture quality</string>
    <string name="setting_title_quality_sound">Sound quality</string>

    <string name="setting_title_texture_quality_check">Lenient texture quality check</string>
    <string name="setting_subtitle_texture_quality_check_off">Optimized textures aren\'t used if they miss the target quality by too much.</string>
    <string name="setting_subtitle_texture_quality_check_on">Optimized textures are used, no matter the resulting quality</string>

    <string-array name="setting_quality_array">
        <item>Very High</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
        <item>Destructive</item>
    </string-array>

    <string name="setting_category_misc">Miscellaneous settings</string>

    <string name="setting_title_remove_original_file">Remove original file</string>
    <string name="setting_subtitle_remove_original_file_off">Original mod files won\'t be removed</string>
    <string name="setting_subtitle_remove_original_file_on">Original mod files will be destroyed upon successful optimization</string>

    <string name="setting_title_remove_signature_file">Remove signature files</string>
    <string name="setting_subtitle_remove_signature_files_off">Signature files are left untouched</string>
    <string name="setting_subtitle_remove_signature_files_on">Signature files will be removed from the optimized mod</string>

</resources>
